--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "material-ui": "^0.18.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-text-mask": "^5.0.2",
-    "text-mask-addons": "^3.5.1"
+    "react-tap-event-plugin": "^2.0.1",
+    "text-mask-addons": "^3.5.1",
+    "text-mask-core": "^5.0.1"
   },
   "devDependencies": {
     "react-scripts": "1.0.6"
