--- a/package.json
+++ b/package.json
@@ -20,5 +20,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "deploy-command": "git subtree push --prefix build origin gh-pages",
+  "deploy-command": "git subtree push --prefix build origin gh-pages"
 }
